[gd_scene load_steps=18 format=3 uid="uid://bm0wdxg3gyd6b"]

[ext_resource type="Script" path="res://Enemies/robot3.gd" id="1_y5df1"]
[ext_resource type="Texture2D" uid="uid://b80hii55jmjnf" path="res://assets/Boss.png" id="2_m4p50"]
[ext_resource type="AudioStream" uid="uid://o2mmg832cxhx" path="res://sounds/bossshoot.wav" id="3_ums54"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jp0hp"]
size = Vector2(11, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_pje05"]
radius = 88.0227

[sub_resource type="Animation" id="Animation_1t86v"]
resource_name = "IDLE"
loop_mode = 1
step = 0.25

[sub_resource type="Animation" id="Animation_sqinw"]
length = 0.001

[sub_resource type="Animation" id="Animation_23l57"]
resource_name = "WALKING"
step = 0.25

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tyu8o"]
_data = {
"IDLE": SubResource("Animation_1t86v"),
"RESET": SubResource("Animation_sqinw"),
"WALKING": SubResource("Animation_23l57")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_521hi"]
atlas = ExtResource("2_m4p50")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjwja"]
atlas = ExtResource("2_m4p50")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_emksi"]
atlas = ExtResource("2_m4p50")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e66i0"]
atlas = ExtResource("2_m4p50")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d465"]
atlas = ExtResource("2_m4p50")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwg3h"]
atlas = ExtResource("2_m4p50")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6da8n"]
atlas = ExtResource("2_m4p50")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k6b11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_521hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjwja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emksi")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e66i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d465")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwg3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6da8n")
}],
"loop": true,
"name": &"WALK",
"speed": 5.0
}]

[node name="robot3" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_y5df1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -1)
shape = SubResource("RectangleShape2D_jp0hp")

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource("CircleShape2D_pje05")

[node name="Reloading" type="Timer" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tyu8o")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_k6b11")
animation = &"IDLE"

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ums54")

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
[connection signal="timeout" from="Reloading" to="." method="_on_reloading_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
